--- a/CoinMaster.FreyYa.Ticker.csproj
+++ b/CoinMaster.FreyYa.Ticker.csproj
@@ -36,6 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -45,6 +46,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RawModels\CmCandleStick.cs" />
+    <Compile Include="RawModels\Place.cs" />
     <Compile Include="RawModels\SellType.cs" />
     <Compile Include="RawModels\Sign.cs" />
     <Compile Include="RawModels\TradeType.cs" />
